--- a/index.html
+++ b/index.html
@@ -163,21 +163,23 @@
             </section>
 
             <section class="cover">
-              <div class="cover__background">
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
-              </div>
+              <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+                <div class="cover__background">
+                  <h2 class="cover__title">До Байкала «на собаках»</h2>
+                  <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+                </div>
+              </a>
             </section>
           </main>
 
             <footer class="footer">
               <nav class="footer__nav">
                 <ul class="footer__ul">
-                  <li class="footer__li"><a class = "footer__link" href="#">Карты</a></li>
-                  <li class="footer__li"><a class = "footer__link" href="#">Погода</a></li>
-                  <li class="footer__li"><a class = "footer__link" href="#">Расписание</a></li>
-                  <li class="footer__li"><a class = "footer__link" href="#">Календарь</a</li>
-                  <li class="footer__li"><a class = "footer__link" href="#">Путешествия</a></li>
+                  <li class="footer__li"><a class = "footer__link" href="https://yandex.ru/maps">Карты</a></li>
+                  <li class="footer__li"><a class = "footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+                  <li class="footer__li"><a class = "footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+                  <li class="footer__li"><a class = "footer__link" href="https://calendar.yandex.ru">Календарь</a</li>
+                  <li class="footer__li"><a class = "footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
                 </ul>
               </nav>
               <p class="footer__copyright">© 2020. Впишите своё имя</p>
