--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     а здесь.
                 </p>
                 <div class="lead__image-section">
-                  <img class="lead__image" src="images/lead-polka.jpg">
+                  <img class="lead__image" src="images/lead-polka.jpg" alt="Фото плацкарта">
                   <p class="lead__caption">ВАША ПОЛКА - ВЕРХНЯЯ</p>
               </div>
             </section>
@@ -42,22 +42,22 @@
                 <li>Объектов культурного наследия ЮНЕСКО 16</li>
                 <li>Природных заповедников 105</li>
                 <li>Аэропортов 241</li>
-              <ul>
+              </ul>
             </section>
 
             <section class="photo-grid" aria-label="Фотографии">
-              <img class="photo-grid__image" src="images/photo-grid-train.jpg">
-              <img class="photo-grid__image" src="images/photo-grid-atharva-tulsi.jpg">
-              <img class="photo-grid__image" src="images/photo-grid-tuman.jpg">
-              <img class="photo-grid__image" src="images/photo-grid-sochi.jpg">
-              <img class="photo-grid__image" src="images/photo-grid-arisa.jpg">
-              <img class="photo-grid__image" src="images/photo-grid-baikal.jpg">
-              <img class="photo-grid__image" src="images/photo-grid-elbrus.jpg">
-              <img class="photo-grid__image" src="images/photo-grid-kondratiev.jpg">
-              <img class="photo-grid__image" src="images/photo-grid-kamchatka-1.jpg">
-              <img class="photo-grid__image" src="images/photo-grid-kamchatka-2.jpg">
-              <img class="photo-grid__image" src="images/photo-grid-baikal-2.jpg">
-              <img class="photo-grid__image" src="images/photo-grid-ergaki.jpg">
+              <img class="photo-grid__image" src="images/photo-grid-train.jpg" alt="Фото поезда">
+              <img class="photo-grid__image" src="images/photo-grid-atharva-tulsi.jpg" alt="Фото Атарвы">
+              <img class="photo-grid__image" src="images/photo-grid-tuman.jpg" alt="Фото тумана">
+              <img class="photo-grid__image" src="images/photo-grid-sochi.jpg" alt="Фото Сочи">
+              <img class="photo-grid__image" src="images/photo-grid-arisa.jpg" alt="Фото Арисы">
+              <img class="photo-grid__image" src="images/photo-grid-baikal.jpg" alt="Фото Байкала">
+              <img class="photo-grid__image" src="images/photo-grid-elbrus.jpg" alt="Фото Эльбруса">
+              <img class="photo-grid__image" src="images/photo-grid-kondratiev.jpg" alt="Фото Кондариева">
+              <img class="photo-grid__image" src="images/photo-grid-kamchatka-1.jpg" alt="Фото Камчатки">
+              <img class="photo-grid__image" src="images/photo-grid-kamchatka-2.jpg" alt="Фото Камчатки">
+              <img class="photo-grid__image" src="images/photo-grid-baikal-2.jpg" alt="Фото Байкала">
+              <img class="photo-grid__image" src="images/photo-grid-ergaki.jpg" alt="Фото Ергаки">
             </section>
 
             <section class="places">
@@ -178,24 +178,12 @@
                   <li class="footer__li"><a class = "footer__link" href="https://yandex.ru/maps">Карты</a></li>
                   <li class="footer__li"><a class = "footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
                   <li class="footer__li"><a class = "footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-                  <li class="footer__li"><a class = "footer__link" href="https://calendar.yandex.ru">Календарь</a</li>
+                  <li class="footer__li"><a class = "footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
                   <li class="footer__li"><a class = "footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
                 </ul>
               </nav>
               <p class="footer__copyright">© 2020. Впишите своё имя</p>
             </footer>
-
-
-
-
-
-
-
-
-
-          
-          
-
       </div>
   </div>  
 </body>
