--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
     <link rel="stylesheet" href="pages/index.css">
     <title>Поездка в России</title>
 </head>
-<body>
-  <div class="page">
+<body class="page">
       <div class="page__content">
-          <div class="header">
+          <header class="header">
               <div class="header__logo"></div>
               <div class="header__links">
                 <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
                 <a class="header__lang-link" href="#">En</a>
               </div>
-          </div>
+            </header>
           <main class = "content">
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
@@ -37,11 +36,11 @@
                 мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. 
                 Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
               <ul class="intro__list">
-                <li>Часовых поясов 11</li>
-                <li>Объектов природного наследия ЮНЕСКО 12</li>
-                <li>Объектов культурного наследия ЮНЕСКО 16</li>
-                <li>Природных заповедников 105</li>
-                <li>Аэропортов 241</li>
+                <li>Часовых поясов <span class="intro__number">11</span></li>
+                <li>Объектов природного наследия ЮНЕСКО <span class="intro__number">12</span></li>
+                <li>Объектов культурного наследия ЮНЕСКО <span class="intro__number">16</span></li>
+                <li>Природных заповедников <span class="intro__number">105</span></li>
+                <li>Аэропортов <span class="intro__number">241</span></li>
               </ul>
             </section>
 
@@ -66,7 +65,7 @@
                   <h2 class="places__title">Куршская коса</h2>
                   <div class="places__website">
                     <p class="places__url-heading">URL</p>
-                    <a class="places__link">park-kosa.ru</a>
+                    <a class="places__link" href="http://park-kosa.ru">park-kosa.ru</a>
                   </div>
                 </div>
                 <div class="places__content">
@@ -182,9 +181,8 @@
                   <li class="footer__li"><a class = "footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
                 </ul>
               </nav>
-              <p class="footer__copyright">© 2020. Впишите своё имя</p>
+              <p class="footer__copyright">© 2020. Ринат</p>
             </footer>
-      </div>
-  </div>  
+      </div> 
 </body>
 </html>
